# grackle-watch

./: .env.example  .gitignore  Dockerfile  Dockerfile.ingest  LICENSE  README.md  docker-compose.yml  pyproject.toml
grackle_watch/: dbt_project.yml
grackle_watch/models/gold/: fct_observations.sql  mart_monthly_sighting_trends.sql  mart_spatial_preference.sql  mart_subject_learning_curves.sql  schema.yml
grackle_watch/models/staging/: sources.yml  stg_ebird.sql  stg_gbif.sql  stg_knb_color_test.sql  stg_knb_interaction.sql  stg_knb_water_tube.sql
ingestion/ebird/: 01_ebird_ingest.py
ingestion/gbif/: 01_gbif_ingest.py
ingestion/knb/: 01_knb_ingest.py
kestra/flows/: pipeline.yml
kestra/flows/ingestion/: ebird.yml  gbif.yml  knb.yml
kestra/flows/processing/: spark.yml
kestra/flows/transformation/: dbt.yml
notebooks/ebird/: 01_ebird_explore.ipynb  02_ebird_transform.ipynb
notebooks/gbif/: 01_gbif_explore.ipynb  02_gbif_transform.ipynb
notebooks/knb/: 01_knb_explore.ipynb  02_knb_transform.ipynb
spark/ebird/: 01_ebird_transform.py
spark/gbif/: 01_gbif_transform.py
spark/knb/: 01_knb_transform.py
terraform/: main.tf  variables.tf
