[project]
name = "grackle-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "dbt-bigquery>=1.11.1",
    "dlt[bigquery]>=1.24.0",
    "dotenv>=0.9.9",
    "ebird-api>=4.0.0",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-storage>=3.1.1",
    "jupyterlab>=4.5.6",
    "kestra>=1.3.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "requests>=2.33.0",
    "seaborn>=0.13.2",
]
